# pdf-data-extraction-pipeline

./: .gitignore  README.md  pyproject.toml
data/processed/: focus_annual.csv
src/examples/: analysis_example.ipynb
src/extract/: download_pdfs_hist.py
src/transform/: extract_infos_from_pdf.py
