[project]
name = "05-pdf-scrapper"
version = "0.1.0"
description = ""
authors = [
    {name = "João Marcos Marrach Borgato",email = "joao_borgato@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber (>=0.11.7,<0.12.0)",
    "camelot-py[cv] (>=1.0.9,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "tesseract (>=0.1.3,<0.2.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=6.30.1,<7.0.0)"
]
